# Quantgres

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: bnb-block-timestamps.md  bnb-raw-logs.md  bnb-swap-events.md  cache-market-onchain-summary.md  event-store-agent-audit.md  feature-batches.md  feature-store-point-in-time.md  hybrid-retrieval.md  jsonb-document-store.md  jsonb-index-benchmark.md  olap-market-return-panel.md  queue-benchmark.md  queue-ingestion-jobs.md  rdb-trading-ledger.md  roadmap.md  runtime-verification.md  search-documents.md  technology-baseline.md  time-series-candles.md  vector-agent-memory.md
reports/: README.md
scripts/: check.ps1
sql/: 001_runtime_checks.sql  README.md
sql/analytics/: 001_market_return_panel.sql
sql/cache/: 001_market_onchain_summary.sql
sql/defi/: 001_swap_events_schema.sql
sql/documents/: 001_raw_payloads_schema.sql  002_jsonb_index_benchmark_schema.sql
sql/event_store/: 001_agent_events_schema.sql
sql/feature_store/: 001_quant_feature_snapshots.sql  (+1 more)
tests/: test_binance_market_data.py  test_bnb_block_timestamps.py  test_bnb_raw_logs.py  test_bnb_rpc.py  test_bnb_swap_corpus.py  test_bnb_swap_projection.py  test_cache_summary.py  test_cli.py  test_config.py  test_embedding_comparison.py  test_event_store.py  test_feature_batches.py  test_feature_store.py  test_hybrid_retrieval.py  test_jsonb_documents.py  test_jsonb_index_benchmark.py  test_olap_return_panel.py  test_queue_benchmark.py  test_rdb_paper_trace.py  test_reports.py  test_search_documents.py  test_vector_memory.py
(+45 files in other folders)
